Less logging. Dropped pleonastic test- prefixes.